--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   </head>
   <body>
     <div id="app">
-      <div id="head">
-        <!-- TODO: Buatlah sebuah header dengan id todo-title -->
-        <h1 id="todo-title">Todo List</h1>
-        <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
-        <p id="id-todo-subtitle">what are you gonna do?</p>
-      </div>
+      <!-- TODO: Buatlah sebuah header dengan id todo-title -->
+      <h1 id="todo-title">Todo List</h1>
+      <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+      <p id="id-todo-subtitle">what are you gonna do?</p>
 
-      <div id="list">
+      <div>
         <!-- Section: input -->
         <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
         <input type="text" id="todo-input"> 
