--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- TODO: Buatlah sebuah header dengan id todo-title -->
       <h1 id="todo-title">Todo List</h1>
       <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
-      <p id="id-todo-subtitle">what are you gonna do?</p>
+      <p id="todo-subtitle">what are you gonna do?</p>
 
       <div>
         <!-- Section: input -->
