--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       // TODO: register event onkeypress / addEventListener untuk input
       // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
       input.addEventListener("keypress", (e)=>{
-        if(e.keyCode=="Enter") fnClickHandler(input.value);
+        if(e.key == "Enter") fnClickHandler(input.value);
       });
     </script>
   </body>
